tests/bugs/gh-463.slang.expected
result code = -1
standard error = {
error[E30015]: undefined identifier
  ╭╼ tests/bugs/gh-463.slang:7:11
  │
7 │ [instance(COUNT)]
  │           ━━━━━ undefined identifier 'COUNT'.
}
standard output = {
}
